Ensure embed iframe has a scrollbar if content overflowed

--- a/assets/css/embed-counters.scss
+++ b/assets/css/embed-counters.scss
@@ -68,7 +68,6 @@ $text: $grey-darker;
 html,
 body {
   margin: 0;
-  overflow: hidden;
 }
 
 * {
